styles/main.css
* {
  box-sizing: border-box;
}

:root{
  --orange: #f1c364;
  --lt-blue:#7aa8be;
  --dark-blue: #3d5e86;
}

html {
font-size: 62.5% /* using rem for font, 22px = 2.2rem*/
}

body{
  height: 100vh;
  margin: 0;
  padding: 0;
}

.resize{
  resize: both;
  overflow: auto;
  padding: 1rem;
  border: 1px solid red;
  width: 100%;
  /* Temporary placement for dev/testing */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 10rem;
}

.container-svg{
  max-width: 60rem;
  width: 100%;
  height: 100%;
  position: relative;
}

svg{
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2rem;
  overflow: visible;
}

.num-circle{
  position: relative;
  z-index:100;
  fill: var(--orange);
  stroke-width: 3px;
  filter: url(#filter);
  stroke: var(--dark-blue);
}

.num-circle-font {
  font-size: 4.2rem;
  text-anchor: middle;
  font-family: "Open Sans";
  font-weight: 800;
}

#arrowRig{
  background-image: url('/assets/images/Group_Arrow.svg');
  height:555px;
  width:555px;
  background-repeat: no-repeat;
  background-size:cover;
  background-position:50%, 50%;
  position:absolute;
  /* position: relative;
  z-index: -100; */
}

.lt-blue-fill {
  fill: var(--lt-blue);
  opacity: 0.33;
}

.circle-show{
  position:relative;
  z-index:100;
  cursor: pointer;
  border: 1px solid red;
  transition: all 0.3s ease-in;
}

/* .circle-show:hover{
  transform: translateY(0.2rem);
} */

